fix mobile horizontal scroll

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -34,8 +34,13 @@ a:hover {
     margin-bottom: 2rem;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     min-height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr auto;
+    overflow-x: hidden;
 }
