--- a/assets/css/images.css
+++ b/assets/css/images.css
@@ -16,6 +16,7 @@
 .cover-image {
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
     object-fit: cover;
     object-position: 60% 50%;
 }
